2005-11-15  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_applet_callbacks.c: Patch for #310370 from
	  Jaap A. Haitsma <jaap@haitsma.org>.
	* stickynotes.c:
	* stickynotes_applet.c:
	* stickynotes_applet_callbacks.[ch]: cleanups from Kjartan Maraas.

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-09-01  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/stickynotes_applet.xml:
	* docs/C/figures/stickynote-left-menu.png:
	* docs/C/figures/stickynote-right-menu-lock.png:
	* docs/C/figures/stickynote-right-menu-new.png:
	* docs/C/figures/stickynote-right-menu.png:
	* docs/C/figures/stickynotes_applet.png: documentation updated for
	  sticky notes

2005-08-20  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes.c: Fix gcc 4.0 warnings. Patch from Jaap A. Haitsma
	<jaap@haitsma.org>.

2005-08-11  Sebastien Bacher  <seb128@debian.org>

	* stickynotes.c: (stickynote_new):
	hide the property dialog instead of closing it (Closes: #310618).

2005-07-20  Davyd Madeley  <davyd@madeley.id.au>

	* docs/Makefile.am:
	* docs/stickynotes_applet.omf.in:
	* docs/C/stickynotes_applet.xml: gnome-doc-utilise

	* docs/: remove unwanted gumpf

2005-07-13  Olav Vitters  <olav@bkor.dhs.org>

	* docs/C/stickynotes_applet.xml:
	* docs/uk/stickynotes_applet.xml:

	Correct duplicate XML id and change one instance of
	stickynotes-using-left-fig to stickynotes-using-right-fig. Also
	correct the description. Patch from Jan de Groot <jan@jgc.homeip.net>.
	Reported by <thacker@math.cornell.edu>. Closes #171728.

2005-07-13  Davyd Madeley  <davyd@madeley.id.au>

	* GNOME_StickyNotesApplet.xml:
	* stickynotes.c:
	* stickynotes.schemas.in:
	* stickynotes_applet.c:
	* stickynotes_applet.h:
	* stickynotes_applet_callbacks.c:
	* stickynotes_applet_callbacks.h: stickynotes features from
	  Jaap A. Haitsma <jaap@haitsma.org>. Closes #308701.

2005-07-01  Davyd Madeley  <davyd@madeley.id.au>
