@@ -1,3 +1,9 @@
+2005-12-22  Davyd Madeley  <davyd@madeley.id.au>
+
+	* stickynotes.c:
+	- fix for #323929, ensures default titles are UTF-8'ed. Based on a
+	  patch from Ryuichi Arafune.
+
 2005-11-15  Davyd Madeley  <davyd@madeley.id.au>
 
 	* stickynotes_applet_callbacks.c: Patch for #310370 from
